--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,63 +4,61 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible==2.9.2
-attrs==19.3.0
-automat==0.8.0
-certifi==2019.11.28
-cffi==1.13.2
-chardet==3.0.4
-click==7.0
-constantly==15.1.0
-coverage==5.0.2           # via pytest-cov
-cryptography==2.8
-cssselect==1.1.0
+ansible==2.9.7            # via -r requirements-dev.in
+attrs==19.3.0             # via -r src/requirements-app.txt, automat, pytest, service-identity, twisted
+automat==20.2.0           # via -r src/requirements-app.txt, twisted
+certifi==2020.4.5.1       # via -r src/requirements-app.txt, requests
+cffi==1.14.0              # via -r src/requirements-app.txt, cryptography
+chardet==3.0.4            # via -r src/requirements-app.txt, requests
+click==7.1.2              # via -r src/requirements-app.txt, shub
+constantly==15.1.0        # via -r src/requirements-app.txt, twisted
+coverage==5.1             # via pytest-cov
+cryptography==2.9.2       # via -r src/requirements-app.txt, ansible, pyopenssl, scrapy, service-identity
+cssselect==1.1.0          # via -r src/requirements-app.txt, parsel, scrapy
 docker-py==1.10.6         # via shub
 docker-pycreds==0.4.0     # via docker-py
-faker==3.0.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.3.0  # via pluggy, pytest
-incremental==17.5.0
-jinja2==2.10.3            # via ansible
-lxml==4.4.2
+faker==4.0.3              # via -r src/requirements-app.txt
+hyperlink==19.0.0         # via -r src/requirements-app.txt, twisted
+idna==2.9                 # via -r src/requirements-app.txt, hyperlink, requests
+incremental==17.5.0       # via -r src/requirements-app.txt, twisted
+jinja2==2.11.2            # via ansible
+lxml==4.5.0               # via -r src/requirements-app.txt, parsel, scrapy
 markupsafe==1.1.1         # via jinja2
-more-itertools==8.0.2     # via pytest, zipp
-packaging==20.0           # via pytest
-parsel==1.5.2
+more-itertools==8.2.0     # via pytest
+packaging==20.3           # via pytest
+parsel==1.5.2             # via -r src/requirements-app.txt, scrapy
 pluggy==0.13.1            # via pytest
-protego==0.1.16
+protego==0.1.16           # via -r src/requirements-app.txt, scrapy
 py==1.8.1                 # via pytest
-pyasn1-modules==0.2.7
-pyasn1==0.4.8
-pycparser==2.19
-pydispatcher==2.0.5
-pyhamcrest==1.9.0
-pyopenssl==19.1.0
-pyparsing==2.4.6          # via packaging
-pytest-cov==2.8.1
-pytest==5.3.2
-python-dateutil==2.8.1
-pyyaml==5.2               # via ansible, shub
-queuelib==1.5.0
-requests==2.22.0
+pyasn1-modules==0.2.8     # via -r src/requirements-app.txt, service-identity
+pyasn1==0.4.8             # via -r src/requirements-app.txt, pyasn1-modules, service-identity
+pycparser==2.20           # via -r src/requirements-app.txt, cffi
+pydispatcher==2.0.5       # via -r src/requirements-app.txt, scrapy
+pyhamcrest==2.0.2         # via -r src/requirements-app.txt, twisted
+pyopenssl==19.1.0         # via -r src/requirements-app.txt, scrapy
+pyparsing==2.4.7          # via packaging
+pytest-cov==2.8.1         # via -r requirements-dev.in
+pytest==5.4.1             # via -r requirements-dev.in, pytest-cov
+python-dateutil==2.8.1    # via -r src/requirements-app.txt, faker
+pyyaml==5.3.1             # via ansible, shub
+queuelib==1.5.0           # via -r src/requirements-app.txt, scrapy
+requests==2.23.0          # via -r src/requirements-app.txt, docker-py, scrapinghub, shub
 retrying==1.3.3           # via scrapinghub, shub
-scrapinghub==2.3.0        # via shub
-scrapy==1.8.0
-selenium==3.141.0
-service-identity==18.1.0
-shub==2.10.0
-six==1.13.0
-text-unidecode==1.3
+scrapinghub==2.3.1        # via shub
+scrapy==2.1.0             # via -r src/requirements-app.txt
+selenium==3.141.0         # via -r src/requirements-app.txt
+service-identity==18.1.0  # via -r src/requirements-app.txt, scrapy
+shub==2.10.0              # via -r requirements-dev.in
+six==1.14.0               # via -r src/requirements-app.txt, automat, cryptography, docker-py, packaging, parsel, protego, pyopenssl, python-dateutil, retrying, scrapinghub, shub, w3lib
+text-unidecode==1.3       # via -r src/requirements-app.txt, faker
 toml==0.10.0              # via shub
-tqdm==4.41.1              # via shub
-twisted==19.10.0
-urllib3==1.25.7
-w3lib==1.21.0
-wcwidth==0.1.8            # via pytest
+tqdm==4.45.0              # via shub
+twisted==20.3.0           # via -r src/requirements-app.txt, scrapy
+urllib3==1.25.9           # via -r src/requirements-app.txt, requests, selenium
+w3lib==1.21.0             # via -r src/requirements-app.txt, parsel, scrapy
+wcwidth==0.1.9            # via pytest
 websocket-client==0.57.0  # via docker-py
-zipp==0.6.0               # via importlib-metadata
-zope.interface==4.7.1
+zope.interface==5.1.0     # via -r src/requirements-app.txt, scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
