--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -5,39 +5,39 @@
 #    pip-compile --output-file=src/requirements-app.txt src/requirements-app.in
 #
 attrs==19.3.0             # via automat, service-identity, twisted
-automat==0.8.0            # via twisted
-certifi==2019.11.28       # via requests
-cffi==1.13.2              # via cryptography
+automat==20.2.0           # via twisted
+certifi==2020.4.5.1       # via requests
+cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via requests
-click==7.0
+click==7.1.2              # via -r src/requirements-app.in
 constantly==15.1.0        # via twisted
-cryptography==2.8         # via pyopenssl, scrapy, service-identity
+cryptography==2.9.2       # via pyopenssl, scrapy, service-identity
 cssselect==1.1.0          # via parsel, scrapy
-faker==3.0.0
+faker==4.0.3              # via -r src/requirements-app.in
 hyperlink==19.0.0         # via twisted
-idna==2.8                 # via hyperlink, requests
+idna==2.9                 # via hyperlink, requests
 incremental==17.5.0       # via twisted
-lxml==4.4.2               # via parsel, scrapy
+lxml==4.5.0               # via parsel, scrapy
 parsel==1.5.2             # via scrapy
 protego==0.1.16           # via scrapy
-pyasn1-modules==0.2.7     # via service-identity
+pyasn1-modules==0.2.8     # via service-identity
 pyasn1==0.4.8             # via pyasn1-modules, service-identity
-pycparser==2.19           # via cffi
+pycparser==2.20           # via cffi
 pydispatcher==2.0.5       # via scrapy
-pyhamcrest==1.9.0         # via twisted
+pyhamcrest==2.0.2         # via twisted
 pyopenssl==19.1.0         # via scrapy
 python-dateutil==2.8.1    # via faker
 queuelib==1.5.0           # via scrapy
-requests==2.22.0
-scrapy==1.8.0
-selenium==3.141.0
+requests==2.23.0          # via -r src/requirements-app.in
+scrapy==2.1.0             # via -r src/requirements-app.in
+selenium==3.141.0         # via -r src/requirements-app.in
 service-identity==18.1.0  # via scrapy
-six==1.13.0               # via automat, cryptography, faker, parsel, protego, pyhamcrest, pyopenssl, python-dateutil, scrapy, w3lib
+six==1.14.0               # via automat, cryptography, parsel, protego, pyopenssl, python-dateutil, w3lib
 text-unidecode==1.3       # via faker
-twisted==19.10.0          # via scrapy
-urllib3==1.25.7           # via requests, selenium
+twisted==20.3.0           # via scrapy
+urllib3==1.25.9           # via requests, selenium
 w3lib==1.21.0             # via parsel, scrapy
-zope.interface==4.7.1     # via scrapy, twisted
+zope.interface==5.1.0     # via scrapy, twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
